--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ff8c00" />
-    <title>QT-Rapimozo | Sistema de Pedidos</title>
+    <title>Comanda Ya</title>
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="Sistema de pedidos móvil para restaurantes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="QT-Rapimozo" />
+    <meta name="apple-mobile-web-app-title" content="ComandaYa" />
     
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://images.pexels.com" />
